--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 class="red blue" title="World">Hello World</h1>
     <script src="/main.js" defer></script>
   </body>
 </html>
